--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3052487407534310"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Your content here -->
